[gd_scene load_steps=17 format=3 uid="uid://bnx6xqy8q5w85"]

[ext_resource type="Texture2D" uid="uid://b8p0w5650fwus" path="res://Assets/images/background.png" id="1_a02cp"]
[ext_resource type="Script" uid="uid://clbqg6q0r4bse" path="res://Scripts/parallax_bg.gd" id="1_go701"]
[ext_resource type="Texture2D" uid="uid://bn8qs6ola1pym" path="res://Assets/images/water.png" id="3_5a7ea"]
[ext_resource type="Texture2D" uid="uid://dbnn275pk338d" path="res://Assets/images/player_spritesheet.png" id="4_8j60k"]
[ext_resource type="Script" uid="uid://bf11ru55xa735" path="res://Scripts/player.gd" id="4_fo5ed"]
[ext_resource type="Script" uid="uid://bx63vdbga1auy" path="res://Scripts/platform_spawner.gd" id="6_5ukr8"]
[ext_resource type="Script" uid="uid://dosj5mls8dqq0" path="res://Scripts/ui_controller.gd" id="7_o06y3"]
[ext_resource type="Script" uid="uid://dq1dypycdi0bo" path="res://Scripts/game_over_gui.gd" id="8_k7acu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o06y3"]
size = Vector2(512, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fo5ed"]
atlas = ExtResource("4_8j60k")
region = Rect2(0, 0, 54, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ukr8"]
atlas = ExtResource("4_8j60k")
region = Rect2(54, 0, 54, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_o06y3"]
atlas = ExtResource("4_8j60k")
region = Rect2(108, 0, 54, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7acu"]
atlas = ExtResource("4_8j60k")
region = Rect2(162, 0, 54, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_5v1tr"]
atlas = ExtResource("4_8j60k")
region = Rect2(216, 0, 54, 69)

[sub_resource type="SpriteFrames" id="SpriteFrames_5a7ea"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fo5ed")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ukr8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o06y3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7acu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5v1tr")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8j60k"]
radius = 16.0
height = 66.0

[node name="World" type="Node2D"]

[node name="ParallaxBG" type="ParallaxBackground" parent="."]
script = ExtResource("1_go701")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBG"]
motion_mirroring = Vector2(512, 0)

[node name="Background" type="Sprite2D" parent="ParallaxBG/ParallaxLayer"]
position = Vector2(256, 128)
scale = Vector2(1.74744, 1.6)
texture = ExtResource("1_a02cp")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBG"]
motion_scale = Vector2(1.3, 1)
motion_mirroring = Vector2(512, 0)

[node name="TextureRect" type="TextureRect" parent="ParallaxBG/ParallaxLayer2"]
offset_top = 226.0
offset_right = 512.0
offset_bottom = 256.0
texture = ExtResource("3_5a7ea")
stretch_mode = 1

[node name="WaterArea2D" type="Area2D" parent="ParallaxBG"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParallaxBG/WaterArea2D"]
position = Vector2(256, 248)
shape = SubResource("RectangleShape2D_o06y3")

[node name="Player" type="CharacterBody2D" parent="."]
unique_name_in_owner = true
position = Vector2(80, 152)
script = ExtResource("4_fo5ed")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player"]
position = Vector2(0, -2)
sprite_frames = SubResource("SpriteFrames_5a7ea")
autoplay = "default"
frame_progress = 0.651335

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(0, -1)
shape = SubResource("CapsuleShape2D_8j60k")

[node name="PlatformSpawner" type="Node" parent="."]
script = ExtResource("6_5ukr8")

[node name="GUI" type="CanvasLayer" parent="."]
script = ExtResource("7_o06y3")

[node name="ScoreLabel" type="Label" parent="GUI"]
offset_right = 512.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 38
text = "Score: 0"
horizontal_alignment = 1

[node name="GameOverGUI" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("8_k7acu")

[node name="Panel" type="Panel" parent="GameOverGUI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverLabel" type="Label" parent="GameOverGUI"]
offset_top = 64.0
offset_right = 512.0
offset_bottom = 117.0
theme_override_font_sizes/font_size = 38
text = "Game Over!"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="GameOverGUI"]
offset_top = 128.0
offset_right = 512.0
offset_bottom = 181.0
theme_override_font_sizes/font_size = 24
text = "Final Score: 999"
horizontal_alignment = 1

[node name="RetryButton" type="Button" parent="GameOverGUI"]
offset_left = 160.0
offset_top = 176.0
offset_right = 352.0
offset_bottom = 232.0
text = "Retry"
